# Hodl

./: .gitignore  INSTALL  Makefile.am  README.md  RELEASE_NOTES.md  configure.ac  libhodlcashconsensus.pc.in
build-aux/m4/: roicoin_find_bdb48.m4  roicoin_qt.m4  roicoin_subdir_to_include.m4
contrib/: README.md  qt_translations.py  roicoin-qt.pro  roicoind.bash-completion  roicoind.service  tidy_datadir.sh
contrib/bitrpc/: README.md  bitrpc.py
contrib/debian/: changelog  control  copyright  roicoin-qt.desktop  roicoin-tx.install  roicoind.bash-completion  roicoind.examples  roicoind.install  roicoind.lintian-overrides  roicoind.manpages  rules  watch
contrib/devtools/: README.md  fix-copyright-headers.py  update-translations.py
contrib/gitian-descriptors/: README.md  gitian-linux.yml  gitian-osx-signer.yml  gitian-osx.yml  gitian-win-signer.yml  gitian-win.yml
contrib/init/: README.md  roicoind.conf  roicoind.init  roicoind.openrc  roicoind.openrcconf  roicoind.service
contrib/linearize/: README.md  example-linearize.cfg  linearize-hashes.py
contrib/macdeploy/: README.md  (+3 more)
depends/: README.md  config.site.in  description.md
doc/: Doxyfile  README.md  README_windows.txt  REST-interface.md  assets-attribution.md  bips.md  build-centos7.txt  build-fedora27.txt  build-osx-on-ubuntu14.txt  build-osx.md  build-unix.md  build-win64-on-ubuntu17.txt  developer-notes.md  dnsseed-policy.md  files.md  gitian-building.md  init.md  multiwallet-qt.md  release-process.md  tor.md  translation_process.md  translation_strings_policy.md  travis-ci.txt  unit-tests.md
share/: genbuild.sh  setup.nsi.in  ui.rc
src/: Makefile.am  Makefile.qt.include  Makefile.qttest.include  Makefile.test.include  addrman.h  alert.h  amount.h  arith_uint256.h  base58.cpp  base58.h  bignum.h  bloom.h  chain.h  chainparams.cpp  chainparams.h  chainparamsbase.h  chainparamsseeds.h  checkpoints.h  checkqueue.h  clientversion.cpp  clientversion.h  coincontrol.h  coins.h  compat.h  compressor.h  core_io.h  core_write.cpp  eccryptoverify.h  ecwrapper.h  hash.h  hodlcash-cli-res.rc  hodlcash-cli.cpp  hodlcash-tx.cpp  hodlcashd-res.rc  hodlcashd.cpp  init.cpp  init.h  key.cpp  key.h  keystore.h  (+50 more)
src/compat/: byteswap.h  endian.h  glibc_compat.cpp  glibc_sanity.cpp  sanity.h  strnlen.cpp
src/consensus/: consensus.h  params.h  validation.h
src/crypto/: common.h  hmac_sha256.h  hmac_sha512.h  ripemd160.h  sha1.h  sha256.h  sha512.h
src/json/: json_spirit_value.h  json_spirit_writer_template.h
src/leveldb/: build_detect_platform
src/leveldb/port/: port_posix.h
src/policy/: fees.h
src/primitives/: block.h  transaction.h
src/qt/: addressbookpage.cpp  addressbookpage.h  addresstablemodel.cpp  addresstablemodel.h  askpassphrasedialog.cpp  askpassphrasedialog.h  clientmodel.h  coincontroldialog.cpp  coincontroldialog.h  coincontroltreewidget.h  csvmodelwriter.h  depositcoinsdialog.cpp  depositcoinsdialog.h  deposittablemodel.cpp  deposittablemodel.h  editaddressdialog.cpp  editaddressdialog.h  guiconstants.h  guiutil.cpp  guiutil.h  hodlcash.cpp  hodlcash.qrc  hodlcash_locale.qrc  hodlcashaddressvalidator.cpp  hodlcashaddressvalidator.h  hodlcashamountfield.cpp  hodlcashamountfield.h  hodlcashgui.cpp  hodlcashgui.h  hodlcashstrings.cpp  hodlcashunits.cpp  hodlcashunits.h  intro.cpp  intro.h  macdockiconhandler.h  macnotificationhandler.h  macnotificationhandler.mm  networkstyle.cpp  networkstyle.h  notificator.h  (+54 more)
src/qt/forms/: addressbookpage.ui  coincontroldialog.ui  depositcoinsdialog.ui  editaddressdialog.ui  helpmessagedialog.ui  intro.ui  optionsdialog.ui  overviewpage.ui  receivecoinsdialog.ui  rpcconsole.ui  sendcoinsdialog.ui  sendcoinsentry.ui  signverifymessagedialog.ui
src/qt/locale/: hodlcash_ach.ts  hodlcash_af_ZA.ts  hodlcash_ar.ts  hodlcash_be_BY.ts  hodlcash_bg.ts  hodlcash_bs.ts  hodlcash_ca.ts  hodlcash_ca@valencia.ts  hodlcash_ca_ES.ts  hodlcash_cmn.ts  hodlcash_cs.ts  hodlcash_cy.ts  hodlcash_da.ts  hodlcash_de.ts  hodlcash_el_GR.ts  hodlcash_en.ts  hodlcash_eo.ts  hodlcash_es.ts  hodlcash_es_CL.ts  hodlcash_es_DO.ts  hodlcash_es_MX.ts  hodlcash_es_UY.ts  hodlcash_et.ts  hodlcash_eu_ES.ts  hodlcash_fa.ts  hodlcash_fa_IR.ts  hodlcash_fi.ts  hodlcash_fr.ts  hodlcash_fr_CA.ts  hodlcash_gl.ts  hodlcash_gu_IN.ts  hodlcash_he.ts  hodlcash_hi_IN.ts  hodlcash_hr.ts  hodlcash_hu.ts  hodlcash_id_ID.ts  hodlcash_it.ts  hodlcash_ja.ts  hodlcash_ka.ts  hodlcash_kk_KZ.ts  (+31 more)
src/qt/res/: hodlcash-qt-res.rc
src/qt/test/: paymentrequestdata.h  paymentservertests.h  test_main.cpp  uritests.cpp  uritests.h
src/script/: hodlcashconsensus.cpp  hodlcashconsensus.h  interpreter.cpp  interpreter.h  script.h  script_error.h  sigcache.h  sign.h  standard.cpp  standard.h
src/secp256k1/: Makefile.am  README.md  libsecp256k1.pc.in
src/secp256k1/src/java/: org_roicoin_NativeSecp256k1.c  org_roicoin_NativeSecp256k1.h
src/secp256k1/src/java/org/roicoin/: NativeSecp256k1.java
src/support/: cleanse.h  pagelocker.cpp  pagelocker.h
src/support/allocators/: secure.h  zeroafterfree.h
src/test/: Checkpoints_tests.cpp  DoS_tests.cpp  README.md  accounting_tests.cpp  alert_tests.cpp  allocator_tests.cpp  arith_uint256_tests.cpp  base32_tests.cpp  base58_tests.cpp  base64_tests.cpp  bignum.h  bip32_tests.cpp  bloom_tests.cpp  checkblock_tests.cpp  coins_tests.cpp  compress_tests.cpp  crypto_tests.cpp  getarg_tests.cpp  hash_tests.cpp  hodlcash-util-test.py  key_tests.cpp  main_tests.cpp  mempool_tests.cpp  miner_tests.cpp  mruset_tests.cpp  multisig_tests.cpp  netbase_tests.cpp  pmt_tests.cpp  policyestimator_tests.cpp  pow_tests.cpp  ratecheck.cpp  reverselock_tests.cpp  rpc_tests.cpp  rpc_wallet_tests.cpp  sanity_tests.cpp  scheduler_tests.cpp  script_P2SH_tests.cpp  script_tests.cpp  scriptnum_tests.cpp  serialize_tests.cpp  (+10 more)
src/test/data/: README.md  hodlcash-util-test.json
src/univalue/: gen.cpp  univalue.h  univalue_escapes.h
src/wallet/: crypter.h  db.h  rpcdump.cpp  rpcwallet.cpp  wallet.cpp  wallet.h  wallet_ismine.h  walletdb.cpp  walletdb.h
src/wallet/test/: wallet_tests.cpp
(+63 files in other folders)
